--- a/03-express/views/layout.hbs
+++ b/03-express/views/layout.hbs
@@ -6,6 +6,7 @@
     <title>Motor de Plantillas HBS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -13,7 +14,6 @@
     {{!-- Traemos los parciales para que se sumen al diseño --}}
 
     {{> navegacion }}
-
     
     {{! Incicamos a la librería de hbs que este archivo es el principal }}
 
