--- a/06-deployEIT/views/partials/navegacion.hbs
+++ b/06-deployEIT/views/partials/navegacion.hbs
@@ -23,7 +23,10 @@
                     <a class="nav-link" href="/productos/listcards">Listamos Cards</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users">Login</a>
+                    <a class="nav-link" href="/users/registro">Registro</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
